finally finally finally fixed the issue where the review form state would not update upon edit submission for only the written review as well as fixed bug where a new current user with no cart items would not be integrated into redux state properly and altered the handle submit function to remove whitespace even in the case of backslash n generation and made very subtle css changes to the form

--- a/app/assets/stylesheets/api/review_form.css
+++ b/app/assets/stylesheets/api/review_form.css
@@ -51,7 +51,7 @@
     display: block;
     top: 43%;
     left: 50%;
-    height: 45rem;
+    height: 42rem;
     width: 35rem;
     
     padding: 1.75rem;
@@ -153,7 +153,7 @@
 /* Written Review */
 .review-form-textarea{
     width: 100%;
-    height: 150px;
+    height: 160px;
     margin-top: 0.75rem;
     padding-top: 5px;
     padding-bottom: 8px;
